<resources>
    <string name="app_name">TaskTwo</string>
    <string name="hint_long_string">Разнообразный и богатый опыт постоянное информационно-техническое обеспечение нашей деятельности способствует повышению актуальности форм воздействия. Разнообразный и богатый опыт консультация с профессионалами из IT влечет за собой процесс внедрения и модернизации форм воздействия. Задача организации, в особенности же сложившаяся структура организации способствует подготовке и реализации новых предложений.</string>
    <string name="hint_short_string">Дорогие друзья</string>

    <!-- Для Сообщений-->
    <string name="add_successfully">Вопрос добавлен!</string>
    <string name="add_failed">Поля вопроса и ответа не должны быть пустыми!</string>

    <!-- Викторина вопросов -->
    <string name="result">result</string>

    <string name="q1">Ты робот?</string>
    <string name="q2">Мы живем на земле?</string>
    <string name="q3">Просто нажми ДА</string>
    <string name="q4">Земля плоская?</string>
    <string name="q5">Много ли в пустыне песка?</string>

    <string name="menu_text">Многофункциональное приложение! Что будем делать?</string>
    <string name="questions_answers">Ответы на вопросы</string>
    <string name="quiz_text">Поиграем в викторину вопросов?</string>
    <string name="stopwatch_text_menu">Воспользуемся таймером?</string>
    <string name="stopwatch_button_text">ТАЙМЕР</string>
    <string name="quiz_button_text">Начать викторину!</string>
    <string name="quiz_result_text">Лучший результат:</string>
    <string name="quiz_next_or_forward_text">Если не знаешь ответ можешь перейти к следующему вопросу или вернуться к предыдущему</string>
    <string name="quiz_final_text">Правильных ответов:</string>
    <string name="quiz_final_button_text">Вернуться в меню</string>
    <string name="enter_question">Введите вопрос...</string>
    <string name="answer">Ответ:</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="add_new_question">Добавить</string>

    <!-- Таймер -->
    <string name="stop_text">СТОП</string>
    <string name="start_text">СТАРТ</string>
    <string name="reset_text">СБРОС</string>

    <!-- Макет для отправки сообщения-->
    <string name="msg_receiver">Кому:</string>
    <string-array name="receivers_list_number">
        <item>8-905-933-9939</item>
        <item>8-812-716-2592</item>
    </string-array>
    <string-array name="receivers_list_name">
        <item>Мышка</item>
        <item>Кнопка</item>
    </string-array>
    <string name="send">ОТПРАВИТЬ</string>
    <string name="title_activity_questions_list">QuestionsListActivity</string>
</resources>
